Added Trac SCM, from https://trac.edgewall.org

--- a/scm.conf
+++ b/scm.conf
@@ -31,4 +31,9 @@
     SVNParentPath /var/www/repos/svn-repos
     SVNListParentPath on
   </Location>
+
+  WSGIScriptAlias /trac /var/www/trac.wsgi
+  <Location /trac>
+    WSGIApplicationGroup %{GLOBAL}
+  </Location>
 </VirtualHost>
