Added Trac environment and a script to automatically create new repositories.

--- a/scm.conf
+++ b/scm.conf
@@ -36,4 +36,10 @@
   <Location /trac>
     WSGIApplicationGroup %{GLOBAL}
   </Location>
+
+  Alias "/new/" "/var/www/new-repository/index"
+  <Location /new>
+    SetHandler cgi-script
+    Options ExecCGI
+  </Location>
 </VirtualHost>
